fix DISQUS iframe margin problem
on post template, DISQUS iframe have some margin and it's out of screen.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -422,6 +422,11 @@ iframe, .fluid-width-video-wrapper {
     margin: 1.75em 0;
 }
 
+/* fix DISQUS iframe margin problem */
+.post-template > iframe {
+   margin: 0;
+}
+
 /* When a video is inside the fitvids wrapper, drop the
 margin on the iframe, cause it breaks stuff. */
 .fluid-width-video-wrapper iframe {
